--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,11 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/otherDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/veruca.js"></script>
+  <script src="src/rainbowDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
