They line up! and dance.

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,6 +17,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RainbowDancer">add a rainbow dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="Veruca">invite Veruca to the partay</a>
       <a href="#" class="makeDanceButton">dance!</a>
+      <a href="#" class="lineUpButton">Line Up!</a>
    </div>
     <script src="src/init.js"></script>
   </body>
