--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,17 +7,19 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/rainbowDancer.js"></script>
-    <script src="src/veruca.js"></script>
+    <script src="src/violet.js"></script>
     <script src="lib/jquery.color-2.1.2.min.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <audio controls><source src = "kiss.mp3" type="audio/mpeg"></audio>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RainbowDancer">add a rainbow dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Veruca">invite Veruca to the partay</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Violet">invite Violet to the partay</a>
       <a href="#" class="makeDanceButton">dance!</a>
       <a href="#" class="lineUpButton">Line Up!</a>
+      <a href="#" class="findPartnerButton">snowball</a>
    </div>
     <script src="src/init.js"></script>
   </body>
