--- a/dancefloor.html
+++ b/dancefloor.html
@@ -20,6 +20,7 @@
       <a href="#" class="makeDanceButton">dance!</a>
       <a href="#" class="lineUpButton">Line Up!</a>
       <a href="#" class="findPartnerButton">snowball</a>
+      <a href="#" class="backgroundButton">teleport!!@!</a>
    </div>
     <script src="src/init.js"></script>
 
