--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/rainbowDancer.js"></script>
     <script src="src/violet.js"></script>
+    <script src="src/pbj.js"></script>
     <script src="lib/jquery.color-2.1.2.min.js"></script>
   </head>
   <body>
@@ -17,6 +18,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RainbowDancer">add a rainbow dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="Violet">invite Violet to the partay</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="PBJ">what time is it?</a>
       <a href="#" class="makeDanceButton">dance!</a>
       <a href="#" class="lineUpButton">Line Up!</a>
       <a href="#" class="findPartnerButton">snowball</a>
