--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,7 +9,14 @@
     <script src="src/rainbowDancer.js"></script>
     <script src="src/violet.js"></script>
     <script src="src/pbj.js"></script>
+    <!-- <script src="src/jquery.curve.animate.js"></script> -->
     <script src="lib/jquery.color-2.1.2.min.js"></script>
+    <script src="lib/jquery-ui.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="lib/jquery-ui.min.css">
+    <link rel="stylesheet" type="text/css" href="lib/jquery-ui.structure.min.css">
+    <!-- <script src="src/jquery.tween.js"></script> -->
+    <!-- <script src="src/jquery.curve.js"></script> -->
+
   </head>
   <body>
     <div class="topbar">
